--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -1149,7 +1149,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:lzichong-4086-fin
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:lzichong-remote-login-fix
         livenessProbe:
           httpGet:
             path: /healthz
