--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -1117,7 +1117,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:lzichong-sample
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:lzichong-vcda4373-final
         livenessProbe:
           httpGet:
             path: /healthz
