Update image to 1.0.1 for testing
Signed-off-by: lzichong <lzichong@vmware.com>

--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -1163,7 +1163,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: projects.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:1.0.0
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:1.0.1.6f8b0b9
         livenessProbe:
           httpGet:
             path: /healthz
